--- a/package.json
+++ b/package.json
@@ -3,30 +3,29 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^5.12.0",
-        "@testing-library/react": "^11.2.6",
-        "@testing-library/user-event": "^12.8.3",
         "firebase": "^8.6.0",
+        "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-firebase-hooks": "^3.0.4",
-        "react-scripts": "4.0.3",
-        "web-vitals": "^1.1.2"
+        "react-firebase-hooks": "^3.0.4"
     },
     "scripts": {
-        "serve": "webpack serve --config webpack.config.js --progress",
-        "build": "webpack --mode production"
+        "serve": "webpack serve --config webpack.config.js --progress --stats-error-details --liveReload",
+        "build": "webpack --mode production",
+        "firebase-login": "~/AppData/Roaming/npm-global/firebase login",
+        "firebase-init": "~/AppData/Roaming/npm-global/firebase init",
+        "firebase-deploy": "~/AppData/Roaming/npm-global/firebase deploy"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
         "babel-loader": "^8.2.2",
-        "json-loader": "^0.5.7",
+        "css-loader": "^5.2.4",
+        "html-webpack-plugin": "^5.3.1",
         "less": "^4.1.1",
         "less-loader": "^8.1.1",
         "mini-css-extract-plugin": "^1.6.0",
-        "url-loader": "^4.1.1",
         "webpack": "^5.37.0",
         "webpack-cli": "^4.7.0",
         "webpack-dev-server": "^3.11.2"
